Added SDL initialization, window, renderer and basic debug logging.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,9 @@ cmake_minimum_required(VERSION 2.8.12)
 include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
 conan_basic_setup()
 
-add_executable(${PROJNAME} main.cpp)
+add_executable(${PROJNAME} main.cpp 
+	src/SDL_Instance.cpp src/SDL_Instance.h 
+	src/DebugTools.cpp src/DebugTools.h)
 target_link_libraries(${PROJNAME} ${CONAN_LIBS})
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
