Added OpenGL context and window functionality.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,9 @@ conan_basic_setup()
 
 add_executable(${PROJNAME} main.cpp
 	src/SDL_Instance.cpp src/SDL_Instance.h 
-	src/DebugTools.cpp src/DebugTools.h)
+	src/DebugTools.cpp src/DebugTools.h
+	src/glContext.cpp src/glContext.h
+	src/glProgram.cpp src/glProgram.h)
 target_link_libraries(${PROJNAME} ${CONAN_LIBS})
 set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT ${PROJNAME})
 
