Added camera and renderer classes, also fixed memory leak regarding glClear(). Next stage is to add drawable object classes.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,12 +6,15 @@ cmake_minimum_required(VERSION 3.0)
 include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
 conan_basic_setup()
 
-add_executable(${PROJNAME} main.cpp
+add_executable( ${PROJNAME} main.cpp
 	src/SDL_Instance.cpp src/SDL_Instance.h 
 	src/DebugTools.cpp src/DebugTools.h
 	src/glContext.cpp src/glContext.h
 	src/glProgram.cpp src/glProgram.h
-	src/AssetManager.cpp src/AssetManager.h)
+	src/AssetManager.cpp src/AssetManager.h
+	src/ProgramInstance.cpp src/ProgramInstance.h
+	src/Renderer.cpp src/Renderer.h 
+	src/Camera.cpp src/Camera.h )
 target_link_libraries(${PROJNAME} ${CONAN_LIBS})
 set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT ${PROJNAME})
 
