--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,7 +18,9 @@ add_executable( ${PROJNAME} main.cpp
 	src/DrawableIncludes.h
 	src/DrawableBase.cpp src/DrawableBase.h 
 	src/Line.cpp src/Line.h
-	src/Arrow.cpp src/Arrow.h )
+	src/Arrow.cpp src/Arrow.h
+	src/Plane.cpp src/Plane.h
+	src/Trajectory.cpp src/Trajectory.h )
 target_link_libraries(${PROJNAME} ${CONAN_LIBS})
 set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT ${PROJNAME})
 
