Added Heatmap.cpp and .h to CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,8 @@ add_executable( ${PROJNAME} main.cpp
 	src/Line.cpp src/Line.h
 	src/Arrow.cpp src/Arrow.h
 	src/Plane.cpp src/Plane.h
-	src/Trajectory.cpp src/Trajectory.h )
+	src/Trajectory.cpp src/Trajectory.h
+	src/Heatmap.cpp	src/Heatmap.h )
 target_link_libraries(${PROJNAME} ${CONAN_LIBS})
 set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT ${PROJNAME})
 
